prusti-tests/tests/verify_partial/fail/issues/issue-738-2.rs
use prusti_contracts::*;

fn main() {}

#[pure]
pub fn get(a: &usize) -> usize {
    *a //~^ ERROR
}
fn foo(a: &usize) {
    let v = get(a);
}
